--- a/index.html
+++ b/index.html
@@ -2305,7 +2305,7 @@
                     <div class="video-info">
                         <h3>How Wealth Inequality Affects You</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Sep 24, 2025</div>
                     </div>
                 </a>
             </div>
@@ -6099,7 +6099,7 @@
                         <div class="video-info">
                             <h3>How Wealth Inequality Affects You</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Sep 24, 2025</div>
                         </div>
                     </a>
                 </div>
