--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Real Change - Growing Past Your Inner Boundaries</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 23.10.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Pizza tutoria in few sec @KyleIstook</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Know the Ecstasy of Living | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>From Suffering To Awakening | Eckhart Tolle on Awakening Through Life's Challenges (Part 1)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -420,7 +420,7 @@
                     <div class="video-info">
                         <h3>Awakening Your Power | Eckhart Tolle on Everyday Presence (Part 3)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -607,7 +607,7 @@
                     <div class="video-info">
                         <h3>Stop Trading Stocks - Futures Are a Better Game 🎯</h3>
                         <div class="channel">Ali Casey | StatOasis</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -739,7 +739,7 @@
                     <div class="video-info">
                         <h3>Philadelphia Hoagie Rolls 2.0 | The Ultimate Upgrade</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -860,7 +860,7 @@
                     <div class="video-info">
                         <h3>The Unawakened Human Condition | Eckhart Tolle on Everyday Presence (Part 2)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -1432,7 +1432,7 @@
                     <div class="video-info">
                         <h3>Stop Letting Life Control You | Eckhart Tolle on Peace, Presence and Inner Freedom (Part 2)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 23.10.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5259,7 +5259,7 @@
                         <div class="video-info">
                             <h3>Stop Trading Stocks - Futures Are a Better Game 🎯</h3>
                             <div class="channel">Ali Casey | StatOasis</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Real Change - Growing Past Your Inner Boundaries</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7260,7 +7260,7 @@
                         <div class="video-info">
                             <h3>Know the Ecstasy of Living | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7271,7 +7271,7 @@
                         <div class="video-info">
                             <h3>From Suffering To Awakening | Eckhart Tolle on Awakening Through Life's Challenges (Part 1)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -7370,7 +7370,7 @@
                         <div class="video-info">
                             <h3>Awakening Your Power | Eckhart Tolle on Everyday Presence (Part 3)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7535,7 +7535,7 @@
                         <div class="video-info">
                             <h3>The Unawakened Human Condition | Eckhart Tolle on Everyday Presence (Part 2)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7678,7 +7678,7 @@
                         <div class="video-info">
                             <h3>Stop Letting Life Control You | Eckhart Tolle on Peace, Presence and Inner Freedom (Part 2)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>Pizza tutoria in few sec @KyleIstook</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8801,7 +8801,7 @@
                         <div class="video-info">
                             <h3>Philadelphia Hoagie Rolls 2.0 | The Ultimate Upgrade</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
