--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>The Fear of Letting Go — Why Traders Bank Too Soon</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - In the Image of God</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>6 Tiny Habits from Japanese Culture to Become More Disciplined</h3>
                         <div class="channel">Samurai Matcha</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Behind the Counter at a Local Japanese Oden Restaurant</h3>
                         <div class="channel">Paolo fromTOKYO</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Embracing Impermanence, with Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Life Has No Meaning... And That’s Where Life Begins</h3>
                         <div class="channel">Einzelgänger</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>A Guide to The Essence of You | Eckhart Tolle on Awakening Through Life's Challenges (Part 2)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -750,7 +750,7 @@
                     <div class="video-info">
                         <h3>12 YEARS OF SIDEMEN 🥳</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -761,7 +761,7 @@
                     <div class="video-info">
                         <h3>What's The Best Month For Stocks?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -2327,7 +2327,7 @@
                     <div class="video-info">
                         <h3>Vikkstar & Afrojack Headline in Bucharest!</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Sep 25, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>The Fear of Letting Go — Why Traders Bank Too Soon</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5292,7 +5292,7 @@
                         <div class="video-info">
                             <h3>What's The Best Month For Stocks?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - In the Image of God</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7282,7 +7282,7 @@
                         <div class="video-info">
                             <h3>Embracing Impermanence, with Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7293,7 +7293,7 @@
                         <div class="video-info">
                             <h3>Life Has No Meaning... And That’s Where Life Begins</h3>
                             <div class="channel">Einzelgänger</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7304,7 +7304,7 @@
                         <div class="video-info">
                             <h3>A Guide to The Essence of You | Eckhart Tolle on Awakening Through Life's Challenges (Part 2)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8234,7 +8234,7 @@
                         <div class="video-info">
                             <h3>6 Tiny Habits from Japanese Culture to Become More Disciplined</h3>
                             <div class="channel">Samurai Matcha</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9572,7 +9572,7 @@
                         <div class="video-info">
                             <h3>Behind the Counter at a Local Japanese Oden Restaurant</h3>
                             <div class="channel">Paolo fromTOKYO</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9616,7 +9616,7 @@
                         <div class="video-info">
                             <h3>12 YEARS OF SIDEMEN 🥳</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9814,7 +9814,7 @@
                         <div class="video-info">
                             <h3>Vikkstar & Afrojack Headline in Bucharest!</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Sep 25, 2025</div>
                         </div>
                     </a>
                 </div>
