--- a/index.html
+++ b/index.html
@@ -1443,7 +1443,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on Finding Inner Peace</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -7689,7 +7689,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on Finding Inner Peace</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
