--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>25 Years of Trading Psychology in Under a Minute 🧠</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">12 minutes ago</div>
+                        <div class="date">27 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>The Essence of Identity with Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">48 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>25 Years of Trading Psychology in Under a Minute 🧠</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">12 minutes ago</div>
+                            <div class="date">27 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>The Essence of Identity with Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">48 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
