--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>The Essence of Identity with Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -2305,7 +2305,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN GUESS THE IMPOSTOR: YOUTUBER EDITION</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Sep 25, 2025</div>
                     </div>
                 </a>
             </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>The Essence of Identity with Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9792,7 +9792,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN GUESS THE IMPOSTOR: YOUTUBER EDITION</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Sep 25, 2025</div>
                         </div>
                     </a>
                 </div>
