--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>The Essence of Identity with Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -464,7 +464,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 22.10.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1450,9 +1450,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=nJ0xIot6oVs" target="_blank">
-                    <img src="https://i.ytimg.com/vi/nJ0xIot6oVs/mqdefault.jpg" alt="My New "Trading System" Kills the Market Over 17 Years">
+                    <img src="https://i.ytimg.com/vi/nJ0xIot6oVs/mqdefault.jpg" alt="My New "Trading System" Destroys the Market">
                     <div class="video-info">
-                        <h3>My New "Trading System" Kills the Market Over 17 Years</h3>
+                        <h3>My New "Trading System" Destroys the Market</h3>
                         <div class="channel">Scott Welsh Strategies</div>
                         <div class="date">2 weeks ago</div>
                     </div>
@@ -5171,7 +5171,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 22.10.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5640,9 +5640,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=nJ0xIot6oVs" target="_blank">
-                        <img src="https://i.ytimg.com/vi/nJ0xIot6oVs/mqdefault.jpg" alt="My New "Trading System" Kills the Market Over 17 Years">
+                        <img src="https://i.ytimg.com/vi/nJ0xIot6oVs/mqdefault.jpg" alt="My New "Trading System" Destroys the Market">
                         <div class="video-info">
-                            <h3>My New "Trading System" Kills the Market Over 17 Years</h3>
+                            <h3>My New "Trading System" Destroys the Market</h3>
                             <div class="channel">Scott Welsh Strategies</div>
                             <div class="date">2 weeks ago</div>
                         </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>The Essence of Identity with Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
